# Deluge-Control

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
config/: logging.conf
config/docker/compose/: docker-compose.local.yaml
config/docker/scripts/: production-entrypoint.sh
src/: alembic.ini  main.py
src/alembic/: env.py
src/alembic/versions/: 2022_11_18_1922-453c8dff2523_added_torrent.py  2022_11_21_1758-4b1f175f02f3_added_torrent_time_added.py  2022_11_21_1927-475a0bc646c1_add_torrentsnapshot.py  2022_11_21_1931-e3ee18d1d8d1_add_pause_to_accepted_states.py  2022_12_27_2050-1354b7b51eb2_add_deleted_to_accepted_states.py  2023_02_21_2032-8a827ad36670_add_torrentretry.py
src/config/: logging.conf
src/config/docker/: Dockerfile.base  Dockerfile.production  docker-compose.base.yaml  docker-compose.production.yaml
src/config/docker/compose/: docker-compose.local.yaml  docker-compose.production.yaml
src/config/docker/scripts/: local-entrypoint.sh  production-entrypoint.sh
src/config/docker/scripts/postgres/local/: init_test_db.sh
src/config/docker/scripts/postgres/production/: init_db.sh
src/deluge_control/: __init__.py  check_torrents.py  client.py  config.py  download_torrents.py  main.py  models.py  rabbit.py  register_torrents.py  session.py  sftp.py  torrents.py  utils.py  xseed.py
src/tests/: test_core.py
src/tests/data/: inferno.torrent
tests/: conftest.py  test_batch_add.py  test_check_torrents.py  test_core.py  test_grab_torrents.py  test_rabbit.py  test_sftp.py  test_xseed.py  utils.py
